fixed Routing, Adsets ScrollBar

--- a/src/App.scss
+++ b/src/App.scss
@@ -243,7 +243,6 @@ a {
 	.navbar-nav {
 		float: right;
 	}
-
 }
 .logo {
 	color: #70818e;
@@ -758,7 +757,6 @@ ul {
 .descriptMenu {
 	overflow: hidden;
 	position: relative;
-	height: 3000px;
 	background: #f3f5f6;
 }
 .formField,
